# openai_gym_ros

./: README.md
openai_ros/openai_ros/: CMakeLists.txt
openai_ros/openai_ros/src/openai_ros/: openai_ros_common.py
robots/turtlebot/kobuki_description/urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
robots/turtlebot/turtlebot_gazebo/launch/: put_robot_in_world.launch  willow_garage.launch
robots/turtlebot/turtlebot_gazebo/launch/includes/: kobuki.launch.xml
robots/turtlebot3/turtlebot3/turtlebot3_bringup/launch/: turtlebot3_remote.launch
robots/turtlebot3/turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro
robots/turtlebot3/turtlebot3/turtlebot3_navigation/launch/: turtlebot3_navigation.launch
robots/turtlebot3/turtlebot3/turtlebot3_navigation/maps/: my_map.pgm
robots/turtlebot3/turtlebot3/turtlebot3_navigation/param/: global_costmap_params_odom.yaml
training/turtlebot2_training/: CMakeLists.txt  package.xml
training/turtlebot2_training/config/: turtlebot2_maze_params.yaml  turtlebot2_wall_params.yaml  turtlebot2_willow_garage_params.yaml
training/turtlebot2_training/launch/: start_training_maze.launch  start_training_wall.launch  start_training_willow_garage.launch
training/turtlebot3_training/: CMakeLists.txt  package.xml
training/turtlebot3_training/config/: turtlebot3_world_params.yaml
training/turtlebot3_training/launch/: start_training_world.launch
training/turtlebot3_training/training_results/: openaigym.episode_batch.0.9103.stats.json  openaigym.manifest.0.9103.manifest.json
(+6 files in other folders)
